# MySoftRender

./: CMakeLists.txt  imgui.ini
output/: output.tga
src/include/: clip.h  vertex.h
src/src/: main.cpp
